update a href and css phone number footer

--- a/curso-community-manager.html
+++ b/curso-community-manager.html
@@ -386,10 +386,10 @@
 							<div class="in-objectivos-g__item">
 								<span class="number">1.</span>
 								<div>
-									<h3>
+									<h3 class="title">
 										Formar Community Managers distinguidos
 									</h3>
-									<p>
+									<p class="info">
 										El community manager es una de las profesiones más demandadas actualmente aunque también hay mucha oferta. Aquí podrás formarte con profesionales del sector y diferenciarte del resto. Aprenderás a conocer perfectamente a tu público y a la competencia, además de poder monitorizar la marca y realizar escucha activa con herramientas especializadas.
 									</p>
 								</div>
@@ -401,10 +401,10 @@
 							<div class="in-objectivos-g__item">
 								<span class="number">2.</span>
 								<div>
-									<h3>
+									<h3 class="title">
 										Acompañar el crecimiento de tu emprendimiento
 									</h3>
-									<p>
+									<p class="info">
 										Saber gestionar tu comunidad y conectar con ella puede crear grandes beneficios a tu negocio. Solo necesitas la formación adecuada que te lleve a optimizar tus estrategias y comunicaciones de la forma más eficiente posible, para conseguir los objetivos que te hayas marcado. Queremos ayudarte a posicionar tu marca y aumentar el número de seguidores activos de tu proyecto.
 									</p>
 								</div>
@@ -416,10 +416,10 @@
 							<div class="in-objectivos-g__item">
 								<span class="number">3.</span>
 								<div>
-									<h3>
+									<h3 class="title">
 										Compartir nuestra visión estratégica y know how
 									</h3>
-									<p>
+									<p class="info">
 										En todo momento aplicamos nuestro método de agencia a casos reales. Te enseñamos a partir de una metodología 100% práctica basada en nuestra experiencia en consultoría y nuestro trabajo con una gran diversidad de clientes y empresas. Transforma tu futuro aprendiendo de profesionales en activo.
 									</p>
 								</div>
