--- a/curso-google-ads.html
+++ b/curso-google-ads.html
@@ -387,11 +387,11 @@
 							<div class="in-objectivos-g__item">
 								<span class="number">1.</span>
 								<div>
-									<h3>
+									<h3 class="title">
 										Formar líderes y PPC Managers
 
 									</h3>
-									<p>
+									<p class="info">
 										El PPC Manager en este caso en publicidad de pago de Google se encarga de administrar de forma eficiente esta publicidad y es una figura muy demandada actualmente por las empresas que invierten en esta área. Da inicio a tu carrera profesional o adquiere las competencias para escalar en tu puesto de trabajo. 
 									</p>
 								</div>
@@ -403,10 +403,10 @@
 							<div class="in-objectivos-g__item">
 								<span class="number">2.</span>
 								<div>
-									<h3>
+									<h3 class="title">
 										Acompañar el crecimiento de tu emprendimiento
 									</h3>
-									<p>
+									<p class="info">
 										Google Ads puede reportar grandes beneficios a tu negocio. Solo necesitas la formación adecuada que te lleve a optimizar tus campañas de la forma más eficiente posible, para conseguir los objetivos que te hayas marcado. Queremos ayudarte a posicionar tu marca, a entender las métricas y controlar el retorno de tu inversión.
 									</p>
 								</div>
@@ -418,10 +418,10 @@
 							<div class="in-objectivos-g__item">
 								<span class="number">3.</span>
 								<div>
-									<h3>
+									<h3 class="title">
 										Compartir nuestra visión estratégica y know how
 									</h3>
-									<p>
+									<p class="info">
 										En todo momento aplicamos nuestro método de agencia a casos reales. Te enseñamos a partir de una metodología 100% práctica basada en nuestra experiencia en consultoría y nuestro trabajo con una gran diversidad de clientes y empresas. Transforma tu futuro aprendiendo de profesionales en activo.
 									</p>
 								</div>
