--- a/curso-seo.html
+++ b/curso-seo.html
@@ -387,10 +387,10 @@
 							<div class="in-objectivos-g__item">
 								<span class="number">1.</span>
 								<div>
-									<h3>
+									<h3 class="title">
 										Formar verdaderos especialistas SEO
 									</h3>
-									<p>
+									<p class="info">
 										El auditor SEO es una de las profesiones más demandadas actualmente por los departamentos de marketing de las grandes empresas. Queremos enseñarte nuestro método de agencia, desde la entrevista inicial previa a un proyecto hasta el desarrollo del Briefing, realizar la estrategia y desarrollar una correcta auditoría seo,  así como su posterior implementación y monitorización.
 									</p>
 								</div>
@@ -402,10 +402,10 @@
 							<div class="in-objectivos-g__item">
 								<span class="number">2.</span>
 								<div>
-									<h3>
+									<h3 class="title">
 										Acompañar el crecimiento de tu emprendimiento
 									</h3>
-									<p>
+									<p class="info">
 										Posicionar orgánicamente tu web a través de estrategias SEO puede reportar grandes beneficios a tu negocio. Aprende de la mano de profesionales a realizar estrategias, plan de propuestas y acciones, optimizar contenidos y demás elementos necesarios para posicionar y monitorear tus proyectos en buscadores.
 									</p>
 								</div>
@@ -417,10 +417,10 @@
 							<div class="in-objectivos-g__item">
 								<span class="number">3.</span>
 								<div>
-									<h3>
+									<h3 class="title">
 										Compartir nuestra visión estratégica y know how
 									</h3>
-									<p>
+									<p class="info">
 										En todo momento aplicamos nuestro método de agencia a casos reales. Te enseñamos a partir de una metodología 100% práctica basada en nuestra experiencia en consultoría y nuestro trabajo con una gran diversidad de clientes y empresas. Transforma tu futuro aprendiendo de profesionales en activo.
 									</p>
 								</div>
