--- a/curso-wordpress.html
+++ b/curso-wordpress.html
@@ -387,10 +387,10 @@
 							<div class="in-objectivos-g__item">
 								<span class="number">1.</span>
 								<div>
-									<h3>
+									<h3 class="title">
 										Diseña tu propia<br> Web con WordPress
 									</h3>
-									<p>
+									<p class="info">
 										El diseño de páginas web a través de WordPress es una de las mejores maneras 
 										de llevar tu negocio a una plataforma online y darle visibilidad.  Queremos enseñarte las herramientas más importantes de la plataforma para que puedas crear tu propia web, así como montar la de futuros clientes. 
 									</p>
@@ -403,10 +403,10 @@
 							<div class="in-objectivos-g__item">
 								<span class="number">2.</span>
 								<div>
-									<h3>
+									<h3 class="title">
 										Acompañar el crecimiento de tu emprendimiento
 									</h3>
-									<p>
+									<p class="info">
 										Llevar tu negocio a una plataforma online sin dudas puede reportar grandes beneficios a tu empresa. Aprende de la mano de profesionales a crear una página web bien diseñada, optimizar contenidos SEO para posicionarla orgánicamente y crear un ecommerce a la medida de tus productos o servicios.
 									</p>
 								</div>
@@ -418,10 +418,10 @@
 							<div class="in-objectivos-g__item">
 								<span class="number">3.</span>
 								<div>
-									<h3>
+									<h3 class="title">
 										Compartir nuestra visión estratégica y know how
 									</h3>
-									<p>
+									<p class="info">
 										En todo momento aplicamos nuestro método de agencia a casos reales. Te enseñamos a partir de una metodología 100% práctica basada en nuestra experiencia en consultoría y nuestro trabajo con una gran diversidad de clientes y empresas. Transforma tu futuro aprendiendo de profesionales en activo.
 									</p>
 								</div>
