--- a/curso-analitica-web.html
+++ b/curso-analitica-web.html
@@ -388,10 +388,10 @@
 							<div class="in-objectivos-g__item">
 								<span class="number">1.</span>
 								<div>
-									<h3>
+									<h3 class="title">
 										Formar verdaderos Data Analysts
 									</h3>
-									<p>
+									<p class="info">
 										El analista de datos (Data Analyst) es una de las profesiones más demandadas actualmente por los departamentos de marketing de las grandes empresas. Aquí no sólamente aprenderás a implementar las herramientas, sino a pensar estratégicamente el uso de los datos y métricas para optimizar el funcionamiento de un negocio, posicionar un producto y/o servicio.
 									</p>
 								</div>
@@ -403,10 +403,10 @@
 							<div class="in-objectivos-g__item">
 								<span class="number">2.</span>
 								<div>
-									<h3>
+									<h3 class="title">
 										Acompañar el crecimiento de tu emprendimiento
 									</h3>
-									<p>
+									<p class="info">
 										Google Analytics puede reportar grandes beneficios a tu negocio. Solo necesitas la formación adecuada que te ayude a entender e interpretar los datos de tu web y así conseguir los objetivos que te hayas marcado. Queremos ayudarte a posicionar tu marca, a entender las métricas y controlar el retorno de tu inversión.
 									</p>
 								</div>
@@ -418,10 +418,10 @@
 							<div class="in-objectivos-g__item">
 								<span class="number">3.</span>
 								<div>
-									<h3>
+									<h3 class="title">
 										Compartir nuestra visión estratégica y know how
 									</h3>
-									<p>
+									<p class="info">
 										En todo momento aplicamos nuestro método de agencia a casos reales. Te enseñamos a partir de una metodología 100% práctica basada en nuestra experiencia en consultoría y nuestro trabajo con una gran diversidad de clientes y empresas. Transforma tu futuro aprendiendo de profesionales en activo.
 									</p>
 								</div>
