--- a/curso-facebook-insta.html
+++ b/curso-facebook-insta.html
@@ -387,10 +387,10 @@
 							<div class="in-objectivos-g__item">
 								<span class="number">1.</span>
 								<div>
-									<h3>
+									<h3 class="title">
 										Formar especialistas en Social Ads
 									</h3>
-									<p>
+									<p class="info">
 										Los especialistas en Social Ads, son profesionales con gran proyección y crecimiento. Son cada vez más solicitados por las agencias, start ups y departamentos de marketing de las empresas. Aquí aprenderás a utilizar estratégicamente las plataformas y sus herramientas para dar inicio a tu carrera profesional o adquirir las competencias para escalar en tu puesto de trabajo. 
 									</p>
 								</div>
@@ -402,10 +402,10 @@
 							<div class="in-objectivos-g__item">
 								<span class="number">2.</span>
 								<div>
-									<h3>
+									<h3 class="title">
 										Acompañar el crecimiento de tu emprendimiento
 									</h3>
-									<p>
+									<p class="info">
 										Si ya tienes tu proyecto o eres profesional, te enseñamos nuestro método de agencia para mejorar los resultados de tu negocio. Queremos ayudarte a posicionar tu marca, a entender las métricas y controlar el retorno de tu inversión.
 									</p>
 								</div>
@@ -417,10 +417,10 @@
 							<div class="in-objectivos-g__item">
 								<span class="number">3.</span>
 								<div>
-									<h3>
+									<h3 class="title">
 										Compartir nuestra visión estratégica y know how
 									</h3>
-									<p>
+									<p class="info">
 										En todo momento aplicamos nuestro método de agencia a casos reales. Te enseñamos a partir de una metodología 100% práctica basada en nuestra experiencia en consultoría y nuestro trabajo con una gran diversidad de clientes y empresas. Transforma tu futuro aprendiendo de profesionales en activo.
 									</p>
 								</div>
