--- a/curso-analitica-web.html
+++ b/curso-analitica-web.html
@@ -592,30 +592,30 @@
 								<div class="subtitle">
 									Nuestro Curso de Analítica Web está dirigido a: 
 								</div>
-								<p>
+								<p class="description">
 									<strong>Profesionales como también a futuros profesionales: estudiantes, autónomos y autodidactas.</strong> Te enseñamos a poner en práctica las herramientas más utilizadas del marketing online, descubrir lo último que ofrecen las plataformas, aplicando sus beneficios a tu propio proyecto o al de tu puesto de trabajo.
 								</p>
 								<div class="list-skills pc-block-p">
 									<div class="item">
 										<i class="icon icon-emprendedor"></i>
-										<span>
+										<span class="title">
 											Emprendedores
 										</span>
-										<p>Comprende la información detrás de los datos, toma las decisiones acertadas y mejora el rendimiento y el tráfico hacia tu web.</p>
+										<p class="info">Comprende la información detrás de los datos, toma las decisiones acertadas y mejora el rendimiento y el tráfico hacia tu web.</p>
 									</div>
 									<div class="item">
 										<i class="icon icon-profesionales"></i>
-										<span>
+										<span class="title">
 											Profesionales
 										</span>
-										<p>Aprende sobre el uso estratégico de los datos y mejora los resultados en tu puesto de trabajo.</p>
+										<p class="info">Aprende sobre el uso estratégico de los datos y mejora los resultados en tu puesto de trabajo.</p>
 									</div>
 									<div class="item">
 										<i class="icon icon-alumno"></i>
-										<span>
+										<span class="title">
 											Graduados
 										</span>
-										<p>Adquiere las herramientas más solicitadas por las agencias de marketing y obtén la experiencia para dar tu primer paso profesional.</p>
+										<p class="info">Adquiere las herramientas más solicitadas por las agencias de marketing y obtén la experiencia para dar tu primer paso profesional.</p>
 									</div>
 								</div>
 							</div>
@@ -627,24 +627,24 @@
 							<div class="list-skills">
 								<div class="item">
 									<i class="icon icon-emprendedor"></i>
-									<span>
+									<span class="title">
 										Emprendedores
 									</span>
-									<p>Comprende la información detrás de los datos, toma las decisiones acertadas y mejora el rendimiento y el tráfico hacia tu web.</p>
+									<p class="info">Comprende la información detrás de los datos, toma las decisiones acertadas y mejora el rendimiento y el tráfico hacia tu web.</p>
 								</div>
 								<div class="item">
 									<i class="icon icon-profesionales"></i>
-									<span>
+									<span class="title">
 										Profesionales
 									</span>
-									<p>Aprende sobre el uso estratégico de los datos y mejora los resultados en tu puesto de trabajo.</p>
+									<p class="info">Aprende sobre el uso estratégico de los datos y mejora los resultados en tu puesto de trabajo.</p>
 								</div>
 								<div class="item">
 									<i class="icon icon-alumno"></i>
-									<span>
+									<span class="title">
 										Graduados
 									</span>
-									<p>Adquiere las herramientas más solicitadas por las agencias de marketing y obtén la experiencia para dar tu primer paso profesional.</p>
+									<p class="info">Adquiere las herramientas más solicitadas por las agencias de marketing y obtén la experiencia para dar tu primer paso profesional.</p>
 								</div>
 							</div>
 						</div>
