--- a/curso-community-manager.html
+++ b/curso-community-manager.html
@@ -590,30 +590,30 @@
 								<div class="subtitle">
 									Nuestro Curso de Community Manager está dirigido a:
 								</div>
-								<p>
+								<p class="description">
 									<strong>Profesionales como también a futuros profesionales: estudiantes, autónomos y autodidactas.</strong> Te enseñamos a poner en práctica las herramientas más utilizadas en gestión de comunidades, descubrir lo último que ofrecen las plataformas, aplicando sus beneficios a tu propio proyecto o al de tu puesto de trabajo. 
 								</p>
 								<div class="list-skills pc-block-p">
 									<div class="item">
 										<i class="icon icon-emprendedor"></i>
-										<span>
+										<span class="title">
 											Emprendedores
 										</span>
-										<p>Aprende a comunicarte con tu comunidad, conoce a tu público y utiliza las herramientas en los horarios y días adecuados.</p>
+										<p class="info">Aprende a comunicarte con tu comunidad, conoce a tu público y utiliza las herramientas en los horarios y días adecuados.</p>
 									</div>
 									<div class="item">
 										<i class="icon icon-profesionales"></i>
-										<span>
+										<span class="title">
 											Profesionales
 										</span>
-										<p>Aprende sobre el uso estratégico de las plataformas y mejora los resultados en tu puesto de trabajo.</p>
+										<p class="info">Aprende sobre el uso estratégico de las plataformas y mejora los resultados en tu puesto de trabajo.</p>
 									</div>
 									<div class="item">
 										<i class="icon icon-alumno"></i>
-										<span>
+										<span class="title">
 											Graduados
 										</span>
-										<p>Adquiere uno de los perfiles más demandados del mercado laboral. Conoce el método de agencia antes de entrar en una.</p>
+										<p class="info">Adquiere uno de los perfiles más demandados del mercado laboral. Conoce el método de agencia antes de entrar en una.</p>
 									</div>
 								</div>
 							</div>
@@ -625,24 +625,24 @@
 							<div class="list-skills">
 								<div class="item">
 									<i class="icon icon-emprendedor"></i>
-									<span>
+									<span class="title">
 										Emprendedores
 									</span>
-									<p>Aprende a comunicarte con tu comunidad, conoce a tu público y utiliza las herramientas en los horarios y días adecuados.</p>
+									<p class="info">Aprende a comunicarte con tu comunidad, conoce a tu público y utiliza las herramientas en los horarios y días adecuados.</p>
 								</div>
 								<div class="item">
 									<i class="icon icon-profesionales"></i>
-									<span>
+									<span class="title">
 										Profesionales
 									</span>
-									<p>Aprende sobre el uso estratégico de las plataformas y mejora los resultados en tu puesto de trabajo.</p>
+									<p class="info">Aprende sobre el uso estratégico de las plataformas y mejora los resultados en tu puesto de trabajo.</p>
 								</div>
 								<div class="item">
 									<i class="icon icon-alumno"></i>
-									<span>
+									<span class="title">
 										Graduados
 									</span>
-									<p>Adquiere uno de los perfiles más demandados del mercado laboral. Conoce el método de agencia antes de entrar en una.</p>
+									<p class="info">Adquiere uno de los perfiles más demandados del mercado laboral. Conoce el método de agencia antes de entrar en una.</p>
 								</div>
 							</div>
 						</div>
