--- a/curso-facebook-insta.html
+++ b/curso-facebook-insta.html
@@ -607,30 +607,30 @@
 								<div class="subtitle">
 									Nuestro Curso de Facebook & Instagram Ads está dirigido a:
 								</div>
-								<p>
+								<p class="description">
 									<strong>Profesionales como también a futuros profesionales: estudiantes, autónomos y autodidactas.</strong> Te enseñamos a poner en práctica las herramientas más utilizadas del marketing online, descubrir lo último que ofrecen las plataformas, aplicando sus beneficios a tu propio proyecto o al de tu puesto de trabajo.
 								</p>
 								<div class="list-skills pc-block-p">
 									<div class="item">
 										<i class="icon icon-emprendedor"></i>
-										<span>
+										<span class="title">
 											Emprendedores
 										</span>
-										<p>Muestra tus productos a la audiencia adecuada, aumenta el número de clientes potenciales,  y mejora la rentabilidad de tu negocio</p>
+										<p class="info">Muestra tus productos a la audiencia adecuada, aumenta el número de clientes potenciales,  y mejora la rentabilidad de tu negocio</p>
 									</div>
 									<div class="item">
 										<i class="icon icon-profesionales"></i>
-										<span>
+										<span class="title">
 											Profesionales
 										</span>
-										<p>Aprende sobre el uso estratégico de las plataformas y mejora los resultados en tu puesto de trabajo.</p>
+										<p class="info">Aprende sobre el uso estratégico de las plataformas y mejora los resultados en tu puesto de trabajo.</p>
 									</div>
 									<div class="item">
 										<i class="icon icon-alumno"></i>
-										<span>
+										<span class="title">
 											Graduados
 										</span>
-										<p>Adquiere las herramientas más solicitadas por las agencias de marketing. Conoce el método de agencia antes de entrar en una.</p>
+										<p class="info">Adquiere las herramientas más solicitadas por las agencias de marketing. Conoce el método de agencia antes de entrar en una.</p>
 									</div>
 								</div>
 							</div>
@@ -642,24 +642,24 @@
 							<div class="list-skills">
 								<div class="item">
 									<i class="icon icon-emprendedor"></i>
-									<span>
+									<span class="title">
 										Emprendedores
 									</span>
-									<p>Muestra tus productos a la audiencia adecuada, aumenta el número de clientes potenciales,  y mejora la rentabilidad de tu negocio</p>
+									<p class="info">Muestra tus productos a la audiencia adecuada, aumenta el número de clientes potenciales,  y mejora la rentabilidad de tu negocio</p>
 								</div>
 								<div class="item">
 									<i class="icon icon-profesionales"></i>
-									<span>
+									<span class="title">
 										Profesionales
 									</span>
-									<p>Aprende sobre el uso estratégico de las plataformas y mejora los resultados en tu puesto de trabajo.</p>
+									<p class="info">Aprende sobre el uso estratégico de las plataformas y mejora los resultados en tu puesto de trabajo.</p>
 								</div>
 								<div class="item">
 									<i class="icon icon-alumno"></i>
-									<span>
+									<span class="title">
 										Graduados
 									</span>
-									<p>Adquiere las herramientas más solicitadas por las agencias de marketing. Conoce el método de agencia antes de entrar en una.</p>
+									<p class="info">Adquiere las herramientas más solicitadas por las agencias de marketing. Conoce el método de agencia antes de entrar en una.</p>
 								</div>
 							</div>
 						</div>
