--- a/curso-google-ads.html
+++ b/curso-google-ads.html
@@ -602,30 +602,30 @@
 								<div class="subtitle">
 									Nuestro Curso de Google Ads está dirigido a: 
 								</div>
-								<p>
+								<p class="description">
 									<strong>Profesionales como también a futuros profesionales: estudiantes, autónomos y autodidactas.</strong> Te enseñamos a poner en práctica las herramientas más utilizadas del marketing online, descubrir lo último que ofrecen las plataformas, aplicando sus beneficios a tu propio proyecto o al de tu puesto de trabajo.
 								</p>
 								<div class="list-skills pc-block-p">
 									<div class="item">
 										<i class="icon icon-emprendedor"></i>
-										<span>
+										<span class="title">
 											Emprendedores
 										</span>
-										<p>Aumenta el número de clientes y mejora la rentabilidad de tu negocio</p>
+										<p class="info">Aumenta el número de clientes y mejora la rentabilidad de tu negocio</p>
 									</div>
 									<div class="item">
 										<i class="icon icon-profesionales"></i>
-										<span>
+										<span class="title">
 											Profesionales
 										</span>
-										<p>Perfecciona tus habilidades y potencia tu carrera.</p>
+										<p class="info">Perfecciona tus habilidades y potencia tu carrera.</p>
 									</div>
 									<div class="item">
 										<i class="icon icon-alumno"></i>
-										<span>
+										<span class="title">
 											Graduados
 										</span>
-										<p>Adquiere una de las herramientas más solicitadas por las agencias de marketing,</p>
+										<p class="info">Adquiere una de las herramientas más solicitadas por las agencias de marketing,</p>
 									</div>
 								</div>
 							</div>
@@ -637,24 +637,24 @@
 							<div class="list-skills">
 								<div class="item">
 									<i class="icon icon-emprendedor"></i>
-									<span>
+									<span class="title">
 										Emprendedores
 									</span>
-									<p>Aumenta el número de clientes y mejora la rentabilidad de tu negocio</p>
+									<p class="info">Aumenta el número de clientes y mejora la rentabilidad de tu negocio</p>
 								</div>
 								<div class="item">
 									<i class="icon icon-profesionales"></i>
-									<span>
+									<span class="title">
 										Profesionales
 									</span>
-									<p>Perfecciona tus habilidades y potencia tu carrera.</p>
+									<p class="info">Perfecciona tus habilidades y potencia tu carrera.</p>
 								</div>
 								<div class="item">
 									<i class="icon icon-alumno"></i>
-									<span>
+									<span class="title">
 										Graduados
 									</span>
-									<p>Adquiere una de las herramientas más solicitadas por las agencias de marketing,</p>
+									<p class="info">Adquiere una de las herramientas más solicitadas por las agencias de marketing,</p>
 								</div>
 							</div>
 						</div>
