--- a/curso-wordpress.html
+++ b/curso-wordpress.html
@@ -617,30 +617,30 @@
 								<div class="subtitle">
 									Nuestro Curso WordPress está dirigido a: 
 								</div>
-								<p>
+								<p class="description">
 									<strong>Profesionales como también a futuros profesionales: estudiantes, autónomos y autodidactas.</strong> Te enseñamos a poner en práctica las herramientas de diseño web más utilizadas actualmente, descubrir lo último que ofrece la plataforma, aplicando sus beneficios a tu propio proyecto o al de tu puesto de trabajo.
 								</p>
 								<div class="list-skills pc-block-p">
 									<div class="item">
 										<i class="icon icon-emprendedor"></i>
-										<span>
+										<span class="title">
 											Emprendedores
 										</span>
-										<p>Crea tu propia página web desde cero, monta tu negocio online y aprende a gestionarlo.</p>
+										<p class="info">Crea tu propia página web desde cero, monta tu negocio online y aprende a gestionarlo.</p>
 									</div>
 									<div class="item">
 										<i class="icon icon-profesionales"></i>
-										<span>
+										<span class="title">
 											Profesionales
 										</span>
-										<p>Incorpora una nueva herramienta para tu trabajo al diseñar con WordPress y destaca en tu puesto de trabajo.</p>
+										<p class="info">Incorpora una nueva herramienta para tu trabajo al diseñar con WordPress y destaca en tu puesto de trabajo.</p>
 									</div>
 									<div class="item">
 										<i class="icon icon-alumno"></i>
-										<span>
+										<span class="title">
 											Graduados
 										</span>
-										<p>Aprende a diseñar con WordPress y adquiere una de las herramientas más demandadas en el mercado laboral.</p>
+										<p class="info">Aprende a diseñar con WordPress y adquiere una de las herramientas más demandadas en el mercado laboral.</p>
 									</div>
 								</div>
 							</div>
@@ -652,24 +652,24 @@
 							<div class="list-skills">
 								<div class="item">
 									<i class="icon icon-emprendedor"></i>
-									<span>
+									<span class="title">
 										Emprendedores
 									</span>
-									<p>Crea tu propia página web desde cero, monta tu negocio online y aprende a gestionarlo.</p>
+									<p class="info">Crea tu propia página web desde cero, monta tu negocio online y aprende a gestionarlo.</p>
 								</div>
 								<div class="item">
 									<i class="icon icon-profesionales"></i>
-									<span>
+									<span class="title">
 										Profesionales
 									</span>
-									<p>Incorpora una nueva herramienta para tu trabajo al diseñar con WordPress y destaca en tu puesto de trabajo.</p>
+									<p class="info">Incorpora una nueva herramienta para tu trabajo al diseñar con WordPress y destaca en tu puesto de trabajo.</p>
 								</div>
 								<div class="item">
 									<i class="icon icon-alumno"></i>
-									<span>
+									<span class="title">
 										Graduados
 									</span>
-									<p>Aprende a diseñar con WordPress y adquiere una de las herramientas más demandadas en el mercado laboral.</p>
+									<p class="info">Aprende a diseñar con WordPress y adquiere una de las herramientas más demandadas en el mercado laboral.</p>
 								</div>
 							</div>
 						</div>
