--- a/master-marketing-digital.html
+++ b/master-marketing-digital.html
@@ -689,30 +689,30 @@
 								<div class="subtitle">
 									Nuestro Máster en Marketing Digital está dirigido a: 
 								</div>
-								<p>
+								<p class="description">
 									<strong>Profesionales como también a futuros profesionales: estudiantes, autónomos y autodidactas.</strong> Te damos la oportunidad para empezar a dominar las bases del marketing digital, descubrir lo último que ofrece cada herramienta, aplicarlas a tu propio proyecto y prepararte para lo que te solicitará el mercado laboral.
 								</p>
 								<div class="list-skills pc-block">
 									<div class="item">
 										<i class="icon icon-emprendedor"></i>
-										<span>
+										<span class="title">
 											Emprendedores
 										</span>
-										<p>Mejora la rentabilidad de tu negocio</p>
+										<p class="info">Mejora la rentabilidad de tu negocio</p>
 									</div>
 									<div class="item">
 										<i class="icon icon-profesionales"></i>
-										<span>
+										<span class="title">
 											Profesionales
 										</span>
-										<p>Potencia tus habilidades y dale un giro a tu carrera</p>
+										<p class="info">Potencia tus habilidades y dale un giro a tu carrera</p>
 									</div>
 									<div class="item">
 										<i class="icon icon-alumno"></i>
-										<span>
+										<span class="title">
 											Graduados
 										</span>
-										<p>Adquiere el perfil más buscado en las agencias de marketing</p>
+										<p class="info">Adquiere el perfil más buscado en las agencias de marketing</p>
 									</div>
 								</div>
 							</div>
@@ -724,24 +724,24 @@
 							<div class="list-skills">
 								<div class="item">
 									<i class="icon icon-emprendedor"></i>
-									<span>
+									<span class="title">
 										Emprendedores
 									</span>
-									<p>Mejora la rentabilidad de tu negocio</p>
+									<p class="info">Mejora la rentabilidad de tu negocio</p>
 								</div>
 								<div class="item">
 									<i class="icon icon-profesionales"></i>
-									<span>
+									<span class="title">
 										Profesionales
 									</span>
-									<p>Potencia tus habilidades y dale un giro a tu carrera</p>
+									<p class="info">Potencia tus habilidades y dale un giro a tu carrera</p>
 								</div>
 								<div class="item">
 									<i class="icon icon-alumno"></i>
-									<span>
+									<span class="title">
 										Graduados
 									</span>
-									<p>Adquiere el perfil más buscado en las agencias de marketing</p>
+									<p class="info">Adquiere el perfil más buscado en las agencias de marketing</p>
 								</div>
 							</div>
 						</div>
