--- a/curso-seo.html
+++ b/curso-seo.html
@@ -591,30 +591,30 @@
 								<div class="subtitle">
 									Nuestro Curso de Posicionamiento SEO está dirigido a: 
 								</div>
-								<p>
+								<p class="description">
 									<strong>Profesionales como también a futuros profesionales: estudiantes, autónomos y autodidactas.</strong> Te enseñamos a poner en práctica las herramientas más utilizadas del marketing online, descubrir lo último que ofrecen las plataformas, aplicando sus beneficios a tu propio proyecto o al de tu puesto de trabajo.
 								</p>
 								<div class="list-skills pc-block-p">
 									<div class="item">
 										<i class="icon icon-emprendedor"></i>
-										<span>
+										<span class="title">
 											Emprendedores
 										</span>
-										<p>Posiciona orgánicamente tu negocio, implementa estrategias de mejora y aumenta el rendimiento y el tráfico hacia tu web.</p>
+										<p class="info">Posiciona orgánicamente tu negocio, implementa estrategias de mejora y aumenta el rendimiento y el tráfico hacia tu web.</p>
 									</div>
 									<div class="item">
 										<i class="icon icon-profesionales"></i>
-										<span>
+										<span class="title">
 											Profesionales
 										</span>
-										<p>Aprende a crear cuadros de mando para monitorización y reporting, realiza informes profesionales y destaca en tu puesto de trabajo.</p>
+										<p class="info">Aprende a crear cuadros de mando para monitorización y reporting, realiza informes profesionales y destaca en tu puesto de trabajo.</p>
 									</div>
 									<div class="item">
 										<i class="icon icon-alumno"></i>
-										<span>
+										<span class="title">
 											Graduados
 										</span>
-										<p>Adquiere uno de los perfiles más solicitados por el mercado laboral y obtén la experiencia que necesitas para dar tu primer paso profesional.</p>
+										<p class="info">Adquiere uno de los perfiles más solicitados por el mercado laboral y obtén la experiencia que necesitas para dar tu primer paso profesional.</p>
 									</div>
 								</div>
 							</div>
@@ -626,24 +626,24 @@
 							<div class="list-skills">
 								<div class="item">
 									<i class="icon icon-emprendedor"></i>
-									<span>
+									<span class="title">
 										Emprendedores
 									</span>
-									<p>Posiciona orgánicamente tu negocio, implementa estrategias de mejora y aumenta el rendimiento y el tráfico hacia tu web.</p>
+									<p class="info">Posiciona orgánicamente tu negocio, implementa estrategias de mejora y aumenta el rendimiento y el tráfico hacia tu web.</p>
 								</div>
 								<div class="item">
 									<i class="icon icon-profesionales"></i>
-									<span>
+									<span class="title">
 										Profesionales
 									</span>
-									<p>Aprende a crear cuadros de mando para monitorización y reporting, realiza informes profesionales y destaca en tu puesto de trabajo.</p>
+									<p class="info">Aprende a crear cuadros de mando para monitorización y reporting, realiza informes profesionales y destaca en tu puesto de trabajo.</p>
 								</div>
 								<div class="item">
 									<i class="icon icon-alumno"></i>
-									<span>
+									<span class="title">
 										Graduados
 									</span>
-									<p>Adquiere uno de los perfiles más solicitados por el mercado laboral y obtén la experiencia que necesitas para dar tu primer paso profesional.</p>
+									<p class="info">Adquiere uno de los perfiles más solicitados por el mercado laboral y obtén la experiencia que necesitas para dar tu primer paso profesional.</p>
 								</div>
 							</div>
 						</div>
