update style HTML tags title info

--- a/master-marketing-digital.html
+++ b/master-marketing-digital.html
@@ -754,7 +754,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 section-title">
-							<h2>
+							<h2 class="section-title__title">
 								Nuestro método
 							</h2>
 							<h4 class="section-title__sub">
@@ -781,13 +781,13 @@
 								<div class="item">
 									<input type="checkbox" hidden name="certificate-social-net" checked id="certificate-social-net">
 									<label for="certificate-social-net">
-										<div>Títulos oficiales</div>
+										<div class="title">Títulos oficiales</div>
 										<span class="subtitle">
 											Certificados por Google y Facebook con validez internacional. 
 										</span>
 									</label>
 									<div class="text">
-										<p>
+										<p class="description">
 											En este Máster te preparamos para los exámenes oficiales ofrecidos por Google y Facebook para que obtengas tus certificaciones en Analytics, Search y Facebook Blueprint. Son títulos internacionales que certifican tu conocimiento sobre esas herramientas y destacan en tu currículum tu experiencia profesional. 
 										</p>
 									</div>		
@@ -797,13 +797,13 @@
 								<div class="item">
 									<input type="checkbox" hidden name="formacion-practica" id="formacion-practica">
 									<label for="formacion-practica">
-										<div>Formación práctica</div>
+										<div class="title">Formación práctica</div>
 										<span class="subtitle">
 											Certificados por Google y Facebook con validez internacional. 
 										</span>
 									</label>
 									<div class="text">
-										<p>
+										<p class="description">
 											Trabajamos con casos reales. Si tienes tu propio proyecto, te enseñaremos a mejorarlo.
 										</p>
 									</div>		
@@ -813,13 +813,13 @@
 								<div class="item">
 									<input type="checkbox" hidden name="grupos-reducios" id="grupos-reducios">
 									<label for="grupos-reducios">
-										<div>Grupos reducidos</div>
+										<div class="title">Grupos reducidos</div>
 										<span class="subtitle">
 											Nos gusta estar por ti y de manera personalizada. Menos es más.
 										</span>
 									</label>
 									<div class="text">
-										<p>
+										<p class="description">
 											En este Máster te preparamos para los exámenes oficiales ofrecidos por Google y Facebook para que obtengas tus certificaciones en Analytics, Search y Facebook Blueprint. Son títulos internacionales que certifican tu conocimiento sobre esas herramientas y destacan en tu currículum tu experiencia profesional. 
 										</p>
 									</div>		
@@ -829,13 +829,13 @@
 								<div class="item">
 									<input type="checkbox" hidden name="metodo-de-agencia" id="metodo-de-agencia">
 									<label for="metodo-de-agencia">
-										<div>Método de agencia</div>
+										<div class="title">Método de agencia</div>
 										<span class="subtitle">
 											Somos profesionales en activo y te enseñamos nuestro Know How.
 										</span>
 									</label>
 									<div class="text">
-										<p>
+										<p class="description">
 											En este Máster te preparamos para los exámenes oficiales ofrecidos por Google y Facebook para que obtengas tus certificaciones en Analytics, Search y Facebook Blueprint. Son títulos internacionales que certifican tu conocimiento sobre esas herramientas y destacan en tu currículum tu experiencia profesional. 
 										</p>
 									</div>		
@@ -852,7 +852,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 section-title">
-							<h2>
+							<h2 class="section-title__title">
 								Profesores
 							</h2>
 							<h4 class="section-title__sub">
@@ -993,23 +993,23 @@
 					<div class="row align-items-center">
 						<div class="col-6 col-sm-12 left-block">
 							<div class="left">
-								<h3>
+								<h3 class="title">
 									Certificaciones oficiales
 								</h3>
 								<div class="subtitle">
 									Válidas internacionalmente
 								</div>
-								<p>
+								<p class="description">
 									<strong>Uno de nuestros grandes diferenciales</strong> es que te preparamos intensivamente para rendir los <strong>exámenes oficiales ofrecidos por Google y Facebook</strong> para que termines la formación con los títulos de acreditación en Analytics, Search y Facebook Blueprint.
 								</p>
-								<p>
+								<p class="description">
 									Siendo uno de los aspectos más valorados en el mercado laboral, sin dudas estas titulaciones serán las estrellas de tu futuro currículum profesional.
 								</p> 
 								<div id="mobile-after-right">
 									<div class="subtitle">
 										Además
 									</div>
-									<p>
+									<p class="description">
 										Al terminar el Máster en Marketing Digital te expediremos un diploma en reconocimiento de la cursada del programa emitido por Instituto Marketing para acreditar tu formación con nosotros.
 									</p>
 								</div>
@@ -1023,7 +1023,7 @@
 									<input type="checkbox" hidden name="certfi-g-a" id="certfi-g-a">
 									<label for="certfi-g-a">Certificación de Google Analytics.</label>
 									<div class="descr">
-										<p>
+										<p class="info">
 											Es una certificación válida durante 18 meses y abarca conceptos básicos y avanzados de Google Analytics, entre los que se incluyen temas como: planificación, principios, implementación, recogida de datos, configuración, administración, conversión, atribución, informes, métricas y dimensiones.
 										</p>
 									</div>
@@ -1035,7 +1035,7 @@
 									<input type="checkbox" hidden name="certfi-g-ads" id="certfi-g-ads">
 									<label for="certfi-g-ads">Certificación de Google Ads</label>
 									<div class="descr">
-										<p>
+										<p class="info">
 											Es una certificación válida durante 18 meses y abarca conceptos básicos y avanzados de Google Analytics, entre los que se incluyen temas como: planificación, principios, implementación, recogida de datos, configuración, administración, conversión, atribución, informes, métricas y dimensiones.
 										</p>
 									</div>
@@ -1047,7 +1047,7 @@
 									<input type="checkbox" hidden name="certfi-g-f" id="certfi-g-f">
 									<label for="certfi-g-f">Certificación Facebook Blueprint</label>
 									<div class="descr">
-										<p>
+										<p class="info">
 											Es una certificación válida durante 18 meses y abarca conceptos básicos y avanzados de Google Analytics, entre los que se incluyen temas como: planificación, principios, implementación, recogida de datos, configuración, administración, conversión, atribución, informes, métricas y dimensiones.
 										</p>
 									</div>
@@ -1064,7 +1064,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 section-title">
-							<h2>
+							<h2 class="section-title__title">
 								Futuro 
 							</h2>
 							<h4 class="section-title__sub">
@@ -1184,8 +1184,8 @@
 					<div id="btn-solicitar" class="row in-form-g__block">
 						<div class="col-5">
 							<div class="in-quote__title">
-								<span>¿Necesitas<br> <strong>más<br> información?</strong></span>
-								<span>
+								<span class="title">¿Necesitas<br> <strong>más<br> información?</strong></span>
+								<span class="info">
 									Llamándonos al 93 541 68 02 o<br> bien rellena este formulario y<br> nos pondremos en contacto<br> contigo lo antes posible.
 								</span>
 							</div>
@@ -1259,8 +1259,8 @@
 					<div class="row">
 						<div class="col-5 col-lg-12">
 							<div class="in-quote__title">
-								<span><b>Lorem ipsum<br> dolor sit<br></b> amet, conse<br> ctetur adipi<br> scing elit</span>
-								<span>
+								<span class="title"><b>Lorem ipsum<br> dolor sit<br></b> amet, conse<br> ctetur adipi<br> scing elit</span>
+								<span class="info">
 									Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit sed<br> hendrerit lacinia ligula, sed<br> laoreet justo.
 								</span>
 							</div>
