--- a/subscribe-nuesta-news.html
+++ b/subscribe-nuesta-news.html
@@ -744,7 +744,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 section-title">
-							<h2>
+							<h2 class="section-title__title">
 								Nuestro método
 							</h2>
 							<h4 class="section-title__sub">
